--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-primitive": "^2.0.1",
     "@radix-ui/react-slot": "^1.1.1",
+    "@shadcn/ui": "^0.0.4",
+    "@tanstack/react-query": "^5.66.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cra-template": "1.2.0",
@@ -15,6 +17,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
+    "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
     "tailwind-merge": "^2.6.0",
     "tailwind-variants": "^0.3.0",
